Tree node text wrapping prevented

--- a/architect-html/src/components/modelTree/ModelTree.module.scss
+++ b/architect-html/src/components/modelTree/ModelTree.module.scss
@@ -31,6 +31,7 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
   display: flex;
   align-items: center;
   gap: 4px;
+  text-wrap-mode: nowrap;
 }
 
 .symbol {
